# HW6-HMM

./: README.md  pyproject.toml
hmm/: __init__.py  hmm.py
test/: test_hmm.py
