[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hmm"
authors = [{name = "Yagmur Doruk Polcyn", email = "yagmur.dorukpolcyn@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy" 
]

[project.urls]
Home = "https://github.com/y-umay/HW6-HMM.git"